# 21.2_Basics_of_layout

./: main.py  pyproject.toml
html_files/: catalog.html  category.html  contacts.html  main.html
